--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="Cloud.h">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="Singleton.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
